crates/resources/tests/snapshots/artifact_cache_download__artifact_downloader_does_not_retry_permanent_http_status_failures.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: "downloader.download(&artifact, &client)"
---
Err(
    HttpStatusFailed {
        url: "https://artifacts.example.test/redis-7.2.5-pv1-darwin-arm64.tar.gz",
        status_code: 404,
    },
)
