crates/resources/tests/snapshots/artifact_cache_download__artifact_downloader_reports_download_progress_events.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: progress.events()
---
[
    "started redis 7.2 7.2.5-pv1 total=22",
    "advanced redis 7.2 7.2.5-pv1 downloaded=22/22",
    "finished redis 7.2 7.2.5-pv1 downloaded=22/22",
]
