crates/resources/tests/snapshots/artifact_cache_download__manifest_cache_fetches_latest_and_falls_back_to_cached_manifest.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: cached.source()
---
Cached {
    reason: "HTTP request failed for `https://artifacts.example.test/manifest.json`: offline",
}
