crates/resources/tests/snapshots/artifact_cache_download__manifest_cache_refresh_latest_does_not_fall_back_to_cached_manifest.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: result
---
Err(
    HttpRequestFailed {
        url: "https://artifacts.example.test/manifest.json",
        reason: "offline",
    },
)
