crates/resources/tests/snapshots/artifact_cache_download__manifest_cache_rejects_http_status_errors_even_when_cached_manifest_exists.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: results
---
[
    (
        403,
        Err(
            HttpStatusFailed {
                url: "https://artifacts.example.test/manifest.json",
                status_code: 403,
            },
        ),
    ),
    (
        404,
        Err(
            HttpStatusFailed {
                url: "https://artifacts.example.test/manifest.json",
                status_code: 404,
            },
        ),
    ),
    (
        500,
        Err(
            HttpStatusFailed {
                url: "https://artifacts.example.test/manifest.json",
                status_code: 500,
            },
        ),
    ),
]
