crates/resources/tests/snapshots/artifact_cache_download__manifest_cache_rejects_incompatible_latest_manifest_even_when_cached_manifest_exists-2.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: "cache.refresh(MANIFEST_URL, &unsupported_client)"
---
Err(
    UnsupportedManifestSchema {
        schema_version: 2,
        supported_schema_version: 1,
    },
)
