crates/resources/tests/snapshots/artifact_cache_download__manifest_cache_rejects_incompatible_latest_manifest_even_when_cached_manifest_exists.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: "cache.refresh(MANIFEST_URL, &newer_client)"
---
Err(
    RequiresNewerPv {
        minimum_pv_version: "999.0.0",
        current_pv_version: "0.2.5",
    },
)
