crates/resources/tests/snapshots/artifact_cache_download__manifest_cache_rejects_invalid_latest_payload_even_when_cached_manifest_exists.snap
---
source: crates/resources/tests/artifact_cache_download.rs
expression: result
---
Err(
    InvalidManifest {
        reason: "EOF while parsing an object at line 1 column 1",
    },
)
